# 80-406-b17

./: .gitignore  README.md  nm_lab5.ipynb  nm_lab6.ipynb  nm_lab7.ipynb  nm_lab8.ipynb
.ipynb_checkpoints/: nm_lab5-checkpoint.ipynb
5/: Lab5.ipynb
6/: 6.py  README.md
7/: Lab7.ipynb
8/: Lab8.ipynb
Demina/: ЧМ Лабораторная №5.ipynb  ЧМ Лабораторная №6.ipynb  ЧМ Лабораторная №7.ipynb  ЧМ Лабораторная №8.ipynb
Lab5/: Lab5 Babin.ipynb  Lab5.ipynb  Lab5.py  README.md  lab1.py  main.py
Lab6/: Lab6.py  README.md
Lab7/: Lab7 Babin.ipynb  Lab7.ipynb  Lab7.py
Lab8/: Lab8 Babin.ipynb  Lab8.ipynb  Lab8.py
lab 1/: GavrilovMS_lab5.docx  GavrilovMS_lab5.ipynb
lab 2/: GavrilovMS_lab6.docx  GavrilovMS_lab6.ipynb
lab 3/: GavrilovMS_lab7.docx  GavrilovMS_lab7.ipynb
lab 4/: GavrilovMS_lab8.docx  GavrilovMS_lab8.ipynb
lab5/: Lab5.ipynb  Lab5NM_report.docx  PolyubinAI_Lab5NM.ipynb  README.md  crank.py  explicit.py  implicit.py  lab5.ipynb  lab5.py  lab5_NM.ipynb  main.py  methods.py  nm_lab5.ipynb  plot.py  tools.py
lab6/: Lab6NM_report.docx  PolyubinAI_Lab6NM.ipynb  README.md  explicit.py  implicit.py  lab6.ipynb  lab6.py  lab6_NM.ipynb  main.py  methods.py  nm_lab6.ipynb  plot.py  tools.py
lab7/: Lab7.ipynb  Lab7NM_report.docx  PoluybinAI_Lab7NM.ipynb  (+12 more)
tasks/lab7/: 7-1.cpp  7-1.hpp  CMakeLists.txt  General.cpp  General.hpp  SI.hpp  main.cpp  test1.txt  test3.txt  test4.txt  test5.txt  test7.txt
tasks/lab8/: 8-1.cpp  8-1.hpp  CMakeLists.txt  FuncMaker.cpp  FuncMaker.hpp  General.cpp  General.hpp  Matrix.hpp  RUN.hpp  main  main.cpp  test1.txt  test5.txt
(+60 files in other folders)
